fix overflow from style side bar

--- a/src/App.css
+++ b/src/App.css
@@ -5,20 +5,21 @@
   --lightGray: #e0dfdf;
 }
 
-body {
-  margin: 0;
- 
-}
-
 html {
   scroll-behavior: smooth;
+  
 }
 
 * {
-  padding: 0%;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-family: "Cairo", sans-serif !important;
+}
+
+body {
+ 
+  scroll-behavior:smooth ;
 }
 
 /* width */
